# slider_joint_control

./: .gitignore  CMakeLists.txt  package.xml
include/slider_joint_control/: MotorManager.h  TMotor.h  TMotorAK10_9.h  TMotorAK60_6.h  TMotorAK80_80.h  ankleKinematics.h  canbus.h
launch/: slider_joint_control.launch.py  slider_rviz.launch.py
meshes/: Left_Foot.STL  Left_Foot_Pitch_Link.STL  Left_Leg.STL  Left_Leg_NEW.STL  Left_Pitch_casing.STL  Left_Slide_Casing.STL  Right_Foot.STL  Right_Foot_Pitch_Link.STL  Right_Leg.STL  Right_Leg_NEW.STL  Right_Pitch_casing.STL  Right_Slide_Casing.STL  base_link.STL
meshes/col/: Left_Foot.STL  Left_Foot_Pitch_Link.STL  Left_Leg.STL  Left_Pitch_casing.STL  Left_Slide_Casing.STL  Right_Foot.STL  Right_Foot_Pitch_Link.STL  Right_Leg.STL  Right_Pitch_casing.STL  Right_Slide_Casing.STL  base_link.STL
scripts/: can_setup.sh  getch_test.py  slider_joint_controller.py  system_id.py  test_ankle.py  test_pub.py  trajectory_playback.py  vcan-setup.sh
scripts/ankle/: FKWeights.npz  ForwardKinematics.py  InverseKinematics.py  utils.py
src/: MotorManager.cpp  TMotor.cpp  ankleKinematics.cpp  ankle_kinematics.cpp  canbus.cpp  example_code.cpp  joint_control.cpp  motor_controller.cpp  test_node.cpp
urdf/: slider_2_0_urdf.urdf
